[tool.poetry]
name = "vrb"
version = "0.1.0"
description = ""
authors = ["whooaami <yarkos03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
invoke = "^2.2.0"
alembic = "^1.13.1"
alchemical = "^1.0.1"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.1"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
faker = "^24.9.0"
black = "^24.4.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
